# wallpaper-anim

./: .gitattributes  .gitignore  App.idl  App.xaml  App.xaml.cpp  App.xaml.h  CLAUDE.md  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  README.md  WallpaperAnimWinUI.vcxproj  XamlMetaDataProvider.idl  app.manifest  build.bat  build_setup.ps1  main.cpp  packages.config  pch.h  release.ps1  setup.cs
.github/workflows/: build.yml
assets/: imgui.ini  sample.hlsl
old_imgui_project/: CMakeLists.txt  build.bat  resource.rc
old_imgui_project/src/: app.cpp  app.h  config.cpp  localization.h  tray.h  version.h
old_imgui_project/src/desktop/: desktop_integration.cpp  desktop_integration.h
old_imgui_project/src/render/: dx11_renderer.h  gif_player.cpp  gif_player.h  shader_player.cpp  video_player.cpp
old_imgui_project/src/render/shaders/: video.hlsl
old_imgui_project/src/ui/: settings_ui.cpp  settings_ui.h
old_imgui_project/src/utils/: preview_player.h  texture_loader.cpp  thumbnail_generator.cpp  thumbnail_generator.h
scripts/: get-version.ps1  package-portable.ps1
src/: config.cpp  config.h  localization.h  main.cpp  tray.cpp  version.h
src/desktop/: desktop_integration.cpp  desktop_integration.h
src/render/: dx11_renderer.cpp  dx11_renderer.h  media_player.h  shader_player.h  video_player.cpp  video_player.h
src/system/: system_monitor.cpp  system_monitor.h
src/ui/: settings_ui.cpp  settings_ui.h
src/utils/: preview_player.cpp  texture_loader.h  thumbnail_generator.cpp  thumbnail_generator.h  update_checker.cpp  (+3 more)
